--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^5.0.8",
-    "@mui/icons-material": "^5.14.11",
+    "@fontsource/inter": "^5.0.15",
+    "@mui/icons-material": "^5.14.16",
     "@mui/joy": "^5.0.0-beta.8",
     "@mui/lab": "^5.0.0-alpha.145",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.14.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "drei": "^2.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.157.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
